# bevy-antsim

./: Cargo.toml  flake.nix
.cargo/: config.toml
src/: main.rs
src/components/: ant.rs  anthill.rs  common.rs  mod.rs
src/systems/: ant.rs  anthill.rs  mod.rs  random_walk.rs  startup.rs
