[package]
name = "ant_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = { version = "0.14.2", features = ["wayland", "dynamic_linking"] }
bevy = { version = "0.14.2", features = ["wayland"] }
bevy_embedded_assets = "0.11.0"
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
